--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <!-- UPDATED: use a local, responsive image -->
       <div class="hero-image slide-up">
-        <img src="C:\Users\Aditya\OneDrive\Desktop\Field\images\Parent using child safety app.jpg" alt="Parent using child safety app" loading="lazy" />
+        <img src="images\Parent using child safety app.jpg" alt="Parent using child safety app" loading="lazy" />
       </div>
     </div>
   </section>
@@ -112,7 +112,7 @@
 
       <!-- UPDATED: image + link to a relevant resource -->
       <a href="https://www.commonsensemedia.org" target="_blank" rel="noopener noreferrer" class="image-link">
-        <img src="C:\Users\Aditya\OneDrive\Desktop\Field\images\parental control.jpg"
+        <img src="images\parental control.jpg"
              alt="Parent monitoring child's device safely"
              loading="lazy" />
       </a>
@@ -134,7 +134,7 @@
 
       <!-- Image links to the same live service -->
       <a href="https://www.life360.com" target="_blank" rel="noopener noreferrer" class="image-link">
-        <img src="C:\Users\Aditya\OneDrive\Desktop\Field\images\gps traking.jpg"
+        <img src="images\gps traking.jpg"
              alt="Live GPS tracking app on smartphone"
              loading="lazy" />
       </a>
@@ -156,7 +156,7 @@
 
       <!-- Local image + external resource -->
       <a href="https://www.stopbullying.gov" target="_blank" rel="noopener noreferrer" class="image-link">
-        <img src="C:\Users\Aditya\OneDrive\Desktop\Field\images\cyber bullying.jpg"
+        <img src="images\cyber bullying.jpg"
              alt="Teen and parent discussing online bullying"
              loading="lazy" />
       </a>
@@ -314,3 +314,4 @@
   </script>
 </body>
 </html>
+
